--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,12 @@
   </dependencies>
 
   <build>
-    <plugins>
+      <plugins>
+	  <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+        </plugin>
       <plugin>
         <groupId>io.spring.javaformat</groupId>
         <artifactId>spring-javaformat-maven-plugin</artifactId>
