--- a/pom.xml
+++ b/pom.xml
@@ -54,18 +54,18 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
-<dependency>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-assembly-plugin</artifactId>
-    <version>3.4.2</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/io.spring.javaformat/spring-javaformat-maven-plugin -->
-<dependency>
-    <groupId>io.spring.javaformat</groupId>
-    <artifactId>spring-javaformat-maven-plugin</artifactId>
-    <version>0.0.35</version>
-</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
+    <dependency>
+       <groupId>org.apache.maven.plugins</groupId>
+       <artifactId>maven-assembly-plugin</artifactId>
+       <version>3.4.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.spring.javaformat/spring-javaformat-maven-plugin -->
+    <dependency>
+        <groupId>io.spring.javaformat</groupId>
+        <artifactId>spring-javaformat-maven-plugin</artifactId>
+        <version>0.0.35</version>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -146,6 +146,7 @@
   </dependencies>
 
   <build>
+     <pluginManagement>
       <plugins>
 	  <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -295,6 +296,7 @@
         </dependencies>
       </plugin>
     </plugins>
+   </pluginManagement>
   </build>
 
   <licenses>
